colour primery changed

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
 :root {
     --color-bg: #04121e;
     --color-bg-variant: #0c4259;
-    --color-primary: #65b8f7;
+    --color-primary: #65c6f7;
     --color-primary-variant: rgba(4, 131, 143, 0.821);
     --color-white: #fff;
     --color-light: rgba(255, 255, 255, 0.6);
